drugi developer je dodao jedan pasus

--- a/index2.html
+++ b/index2.html
@@ -12,5 +12,7 @@
 
     <p>Mi smo firma odnosno jezikom kapitalizma kompanija koja se bavi prodajom prazne slame</p>
     
+    <p> Pasus koji je kao dodao drugi saradnik u timu. Ovo je imitacija rada drugog developera koji radi sa mnom.</p>
+    
 </body>
 </html>
