--- a/galerija.html
+++ b/galerija.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git demo</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Galerija stranica</title>
 </head>
 <body>
-    <h1>Git</h1>
-
-    <img src="./image/Novi-Sad.jpg" alt="neka_slika">
-
-
-    <div>Dodata galerija stranica</div>
+    <h1>Galerija stranica</h1>
     
 </body>
 </html>
