dodate slike (4) u galeriju

--- a/galerija.html
+++ b/galerija.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerija stranica</title>
+
+    <style>
+        body{
+            background-color: darkolivegreen;
+        }
+
+        span {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Galerija stranica</h1>
+
+    <table>
+        <tr><img src="./image/Untitled.jpg" alt="prva-slika" style="width: 400px; height: 400px;margin:30px;"></tr>
+        <tr><img src="./image/novi-sad-petrovaradin-panorama.jpg" alt="druga-slika" style="width: 400px; height: 400px; margin:30px;"></tr>
+        <tr><img src="./image/bishops-palace.webp" alt="treca-slika" style="width: 400px; height: 400px; margin:30px;"></tr>
+        <tr><img src="./image/zezelj-bridge-npvi-sad-jan-valo.webp" alt="cetvrta-slika" style="width: 400px; height: 400px; margin:30px;"></tr>
+    </table>
     
 </body>
 </html>
