Dodat jedan paragraf u galerija fajlu

--- a/galerija.html
+++ b/galerija.html
@@ -25,6 +25,8 @@
         <tr><img src="./image/bishops-palace.webp" alt="treca-slika" style="width: 400px; height: 400px; margin:30px;"></tr>
         <tr><img src="./image/zezelj-bridge-npvi-sad-jan-valo.webp" alt="cetvrta-slika" style="width: 400px; height: 400px; margin:30px;"></tr>
     </table>
+
+    <p>Neke slike Novog Sada</p>
     
 </body>
 </html>
