--- a/testni.html
+++ b/testni.html
@@ -13,7 +13,7 @@
 
     
   <p> Ovo je napravljeno na gitHub-u direktno. Ovo sam napravio tako sto sam kreirao novu granu na gitHubu. I to na osnovu koda iz main grane i dodao sam 
-    ovaj fajl i to direktno ga pisuci na gitHubu, koristeci opciju "Add new files"</p>
+    ovaj fajl i to direktno ga pisuci na gitHubu, koristeci opciju "Add file" i unutar nje opciju "Create new file"</p>
 
    
     
